refactor team blueprint and api
